bug: Fix h1 alignment in small screens

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -4,6 +4,7 @@ header {
 
 h1 {
   font-size: 4em !important;
+  text-align: center;
 }
 
 h2 {
